# Simple-Calculator-SOLUTION

./: CMakeLists.txt
inc/: SimpleCalculator.h
src/: SimpleCalculator.cpp  SimpleCalculatorTest.cpp
